--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Roboto', sans-serif;
+  height: 100vh;
+  width: 100%;
 }
 
 a {
@@ -13,45 +15,36 @@ a:hover {
 
 /* NAVIGATION */
 
-
 nav {
-  width: 1570px;
-  margin: 0 auto;
-  height: 100px;
+  height: 70px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-.sign-in {
-  width: 70px;
-  height: 30px;
-  background-color: #4285f4;
-  margin-top: 15px;
-  border-radius: 5%;
-  float: right;
-  cursor: default;
-}
-
-.sign-in p {
-  font-size: 15px;
-  color: #FFF;
-  font-weight: 500;
-  text-align: center;
-  padding-top: 6.5px;
-}
-
-nav ul li {
-  display: inline;
-  padding: 22px 10px 0 10px;
-}
-
-nav ul li a {
-  display: block;
+nav a {
+  display: flex;
+  align-items: center;
   color: rgba(0, 0, 0, 0.75);
-  font-size: 13px;
+  font-size: 14px;
   font-weight: 500;
 }
 
-li .material-icons {
+.nav-links {
+  width: 250px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.nav-links img {
+  width: 33px;
+  border-radius: 50%;
   cursor: pointer;
+}
+
+.material-icons {
+  cursor: pointer;
+  font-size: 26px;
 }
 
 
@@ -61,7 +54,7 @@ li .material-icons {
 .google-logo {
   display: block;
   margin: 0 auto;
-  padding: 100px 0 0 0;
+  padding: 150px 0 0 0;
 }
 
 .search-bar {
@@ -75,8 +68,10 @@ li .material-icons {
 #search-icon {
   width: 20px;
   position: relative;
-  top: 35px;
-  left: 17px;
+  top: 38px;
+  left: 15px;
+  color: rgba(0, 0, 0, 0.75);
+  cursor: default;
 }
 
 #mic-icon {
@@ -91,7 +86,7 @@ input[type="text"] {
   height: 42px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 30px;
-  font-size: 16px;
+  font-size: 17px;
   padding: 0 50px;
 }
 
@@ -106,11 +101,15 @@ input[type="text"]:focus {
 
 
 
-/* options */
-.options {
-  width: 300px;
-  display: block;
-  margin: 0 auto;
+/* SECTION */
+
+section {
+  display: flex;
+  justify-content: center;
+}
+
+section div {
+  width: 290px;
 }
 
 input[type="submit"] {
@@ -136,7 +135,7 @@ input[name="lucky"] {
 input[type="submit"]:hover {
   box-shadow: 1px 1px 5px 0 #BEBFBE;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  color: rgba(0, 0, 0);
+  color: #000;
 }
 
 input[type="submit"]:focus {
@@ -147,26 +146,30 @@ input[type="submit"]:focus {
 /* FOOTER */
 
 footer {
-width: 100%;
-height: 45px;
-background-color: #f2f2f2;
-position: fixed;
-top: 745px;
+  position: fixed;
+  bottom: 0;
+  background-color: #f2f2f2;
+  width: 100%;
+  height: 45px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-footer ul {
-  width: 1566px;
-  display: block;
-  margin: 0 auto;
-}
-
-footer ul li {
-  display: inline;
-  padding: 15px 13px 0 13px;
-
-}
-
-footer ul li a {
+footer a {
   color: #5F6368;
   font-size: 14px;
+}
+
+footer div {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.footer-links-left {
+  width: 300px;
+}
+
+.footer-links-right {
+  width: 200px;
 }
