Made Website Responsive for Mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,44 +50,50 @@ nav a {
 
 /* Search Bar and Google Logo */
 
-
 .google-logo {
   display: block;
   margin: 0 auto;
-  padding: 150px 0 0 0;
+  padding-top: 150px;
+  padding-bottom: 30px;
 }
 
 .search-bar {
   display: block;
   margin: 0 auto;
-  width: 582px;
-  height: 44px;
-  padding-bottom: 40px;
+  width: fit-content;
+  height: 42px;
+  position: relative;
 }
 
+
 #search-icon {
-  width: 20px;
-  position: relative;
-  top: 38px;
+  position: absolute;
   left: 15px;
-  color: rgba(0, 0, 0, 0.75);
+  top: 10px;
+  color: #5F6368;
   cursor: default;
 }
 
 #mic-icon {
+  position: absolute;
+  right: 10px;
+  top: 6px;
+}
+
+.search-bar img {
   width: 33px;
-  position: relative;
-  top: 42px;
-  left: 510px;
 }
 
 input[type="text"] {
-  width: 480px;
+  display: block;
+  margin: 0 auto;
+  width: 50vw;
+  max-width: 480px;
   height: 42px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 30px;
-  font-size: 17px;
   padding: 0 50px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  font-size: 17px;
 }
 
 input[type="text"]:hover {
@@ -100,16 +106,12 @@ input[type="text"]:focus {
 }
 
 
+/* OPTIONS */
 
-/* SECTION */
-
-section {
-  display: flex;
-  justify-content: center;
-}
-
-section div {
-  width: 290px;
+.options {
+  width: fit-content;
+  display: block;
+  margin: 0 auto;
 }
 
 input[type="submit"] {
@@ -120,28 +122,35 @@ input[type="submit"] {
   height: 36px;
   padding: 0 10px;
   margin: 30px 5px 0 5px;
-  cursor: pointer;
   border-radius: 4px;
-}
-
-input[name="Google-Search"] {
-  width: 120px;
-}
-
-input[name="lucky"] {
-  width: 140px;
+  cursor: pointer;
 }
 
 input[type="submit"]:hover {
   box-shadow: 1px 1px 5px 0 #BEBFBE;
-  border: 1px solid rgba(0, 0, 0, 0.2);
   color: #000;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 input[type="submit"]:focus {
+  box-shadow: 1px 1px 5px 0 #BEBFBE;
+  color: #000;
   border: 1px solid #1990FF;
 }
 
+input[value="Google Search"] {
+  width: 120px;
+}
+
+input[value="I'm Feeling Lucky"] {
+  width: 140px;
+}
+
+@media only screen and (max-width: 600px){
+  .options {
+    display: none;
+  }
+}
 
 /* FOOTER */
 
@@ -154,6 +163,7 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-top: 1px solid #5F6368;
 }
 
 footer a {
@@ -172,4 +182,25 @@ footer div {
 
 .footer-links-right {
   width: 200px;
+}
+
+@media only screen and (max-width: 600px) {
+
+  footer {
+    height: 70px;
+    flex-flow: column;
+    justify-content: space-evenly;
+  }
+
+  footer a {
+    font-size: 15px;
+  }
+
+  .footer-links-left {
+    width: 100%;
+  }
+
+  .footer-links-right {
+    width: 100%;
+  }
 }
